--- a/pom.xml
+++ b/pom.xml
@@ -279,6 +279,18 @@
     <maven>3.0.4</maven>
   </prerequisites>
   <dependencies>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>${junit.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-all</artifactId>
+      <version>${mockito-all.version}</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <!-- ==================================================================== -->
@@ -318,5 +330,8 @@
     <!-- Other properties -->
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    <!-- Dependency version numbers -->
+    <junit.version>4.12</junit.version>
+    <mockito-all.version>1.10.8</mockito-all.version>
   </properties>
 </project>
