--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   <name>Property-Alliance</name>
   <version>0.1-SNAPSHOT</version>
   <description>Property Alliance</description>
-  <url>https://github.com/jodastephen/property-alliance</url>
+  <url>https://jodastephen.github.io/property-alliance</url>
 
   <!-- ==================================================================== -->
   <issueManagement>
@@ -130,6 +130,48 @@
             </goals>
           </execution>
         </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-site-plugin</artifactId>
+        <configuration>
+          <skipDeploy>true</skipDeploy>
+        </configuration>
+        <dependencies>
+          <dependency>
+            <groupId>lt.velykis.maven.skins</groupId>
+            <artifactId>reflow-velocity-tools</artifactId>
+            <version>1.1.1</version>
+          </dependency>
+          <dependency>
+            <groupId>org.apache.velocity</groupId>
+            <artifactId>velocity</artifactId>
+            <version>1.7</version>
+          </dependency>
+        </dependencies>
+      </plugin>
+      <plugin><!-- invoke with mvn site-deploy -->
+        <groupId>com.github.github</groupId>
+        <artifactId>site-maven-plugin</artifactId>
+        <version>0.10</version>
+        <executions>
+          <execution>
+            <id>github-site</id>
+            <goals>
+              <goal>site</goal>
+            </goals>
+            <phase>site-deploy</phase>
+          </execution>
+        </executions>
+        <configuration>
+          <message>Create website for ${project.artifactId} v${project.version}</message>
+          <path>property-alliance</path>
+          <merge>true</merge>
+          <server>github</server>
+          <repositoryOwner>jodastephen</repositoryOwner>
+          <repositoryName>jodastephen.github.io</repositoryName>
+          <branch>refs/heads/master</branch>
+        </configuration>
       </plugin>
     </plugins>
     <!-- Manage plugin versions -->
