Add Nicolai as contributor

--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,10 @@
     </developer>
   </developers>
   <contributors>
+    <contributor>
+      <name>Nicolai Parlog</name>
+      <url>https://github.com/nicolaiparlog</url>
+    </contributor>
   </contributors>
 
   <!-- ==================================================================== -->
